crates/formatter/tests/snapshots/snapshots__synapse__main__delta__59__11drop_thumbnail_constraint.postgres.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
/* Copyright 2021 The Matrix.org Foundation C.I.C
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

-- drop old constraints on remote_media_cache_thumbnails
--
-- This was originally part of 57.07, but it was done wrong, per
-- https://github.com/matrix-org/synapse/issues/8649, so we do it again.
insert into background_updates (
	ordering,
	update_name,
	progress_json,
	depends_on
)
values
	(
		5911,
		'media_repository_drop_index_wo_method_2',
		'{}',
		'remote_media_repository_thumbnails_method_idx'
	);
