crates/formatter/tests/snapshots/snapshots__synapse__main__delta__59__14refresh_tokens.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
--
-- This file is licensed under the Affero General Public License (AGPL) version 3.
--
-- Copyright (C) 2023 New Vector, Ltd
--
-- This program is free software: you can redistribute it and/or modify
-- it under the terms of the GNU Affero General Public License as
-- published by the Free Software Foundation, either version 3 of the
-- License, or (at your option) any later version.
--
-- See the GNU Affero General Public License for more details:
-- <https://www.gnu.org/licenses/agpl-3.0.html>.
--
-- Originally licensed under the Apache License, Version 2.0:
-- <http://www.apache.org/licenses/LICENSE-2.0>.
--
-- [This file includes modifications made by New Vector Limited]
--
--
/* Copyright 2021 The Matrix.org Foundation C.I.C
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

-- Holds MSC2918 refresh tokens
create table refresh_tokens (
	id bigint primary key,
	user_id text not null,
	device_id text not null,
	token text not null,
	-- When consumed, a new refresh token is generated, which is tracked by
	-- this foreign key
	next_token_id bigint references refresh_tokens (id) on delete cascade,
	unique(token)
);

-- Add a reference to the refresh token generated alongside each access token
alter table access_tokens
	add column refresh_token_id bigint references refresh_tokens (
		id
	) on delete cascade;

-- Add a flag whether the token was already used or not
alter table access_tokens add column used boolean;
